<resources>
    <string name="app_name">PathSeen</string>
    <string name="register_form">Register Form</string>
    <string name="helperText">*Required</string>
    <string name="Name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Repassword">Confirm password</string>
    <string name="Favorite_genres">Favorite genres</string>
    <string name="drama">Drama</string>
    <string name="Crime">Crime</string>
    <string name="Thriller">Thriller</string>
    <string name="Action">Action</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
    <string name="signup_option">Don\'t you have an account?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tittle_options">Options</string>
    <string name="title_books">Books</string>
    <string name="tittle_games">Games</string>
    <string name="tittle_movies">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signOut">Sign Out</string>
    <string name="title_addmovies">Add movies</string>
    <string name="title_addgames">Add games</string>
    <string name="title_addbooks">Add books</string>
    <string name="info_addmovies">Aquí aparecerán las películas que se pueden guardar.</string>
    <string name="info_addgames">Aquí se encontrarán los videojuegos que se pueden guardar y puntuar.</string>
    <string name="info_addbooks">Aquí se encontrarán los libros que se desean guardar y puntuar.</string>
    <string name="Adventure">Adventure</string>
    <string name="Horror">Horror</string>
    <string name="ScienceFiction">ScienceFiction</string>
    <string name="Shooter">Shooter games</string>
    <string name="Role">Role games</string>
    <string name="Platform">Platform games</string>
    <string name="Simulation">Simulation games</string>
    <string name="Sports">Sports games</string>
    <string name="Fighting">Fighting games</string>
    <string name="Mystery">Mystery</string>
    <string name="Historical">Historical</string>
    <string name="Romance">Romance</string>
    <string name="Western">Western</string>
    <string name="Fiction">Fiction</string>
    <string name="Costumbrismo">Costumbrismo</string>
    <string name="MagicRealism">Magic Realism</string>
    <string name="nameExample"> </string>
    <string name="emailExample"> </string>
    <string name="genresExample"> </string>
    <string name="booksExample">Here will be the name of the book.</string>
    <string name="scoreExample">Here will be the score, it is optional.</string>
    <string name="saveButton">Save</string>
    <string name="genreExample">Here msut be the genre.</string>
    <string name="ejemplolibro">Stoner</string>
    <string name="ejemplogenerolibro">Drama</string>
    <string name="pending">Pending</string>
    <string name="gamesExample">Here will be the name of the gameFS from an API</string>
    <string name="ejemploscore">4</string>
    <string name="moviesExample">Here will be the name of a movieFS from an API.</string>
    <string name="titleExample">Title</string>
    <string name="creatorExample">Creator:</string>
</resources>