<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".ui.signup.SignUpActivity"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tittle_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_form"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/helperText"
            app:startIconDrawable="@android:drawable/ic_menu_edit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/Name"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/helperText"
            app:startIconDrawable="@android:drawable/ic_dialog_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:helperText="@string/helperText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@android:drawable/ic_lock_idle_lock"
                android:hint="@string/password"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reppassword_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:helperText="@string/helperText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reppassword_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@android:drawable/ic_lock_idle_lock"
                android:hint="@string/Repassword"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/favorite_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/Favorite_genres"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/drama_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drama" />

        <CheckBox
            android:id="@+id/crime_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Crime" />

        <CheckBox
            android:id="@+id/thriller_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Thriller" />

        <CheckBox
            android:id="@+id/other_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Action" />

        <CheckBox
            android:id="@+id/adventure_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Adventure" />

        <CheckBox
            android:id="@+id/horror_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Horror" />

        <CheckBox
            android:id="@+id/scienceFiction_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ScienceFiction" />

        <CheckBox
            android:id="@+id/shooter_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Shooter" />

        <CheckBox
            android:id="@+id/role_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Role" />

        <CheckBox
            android:id="@+id/platform_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Platform" />

        <CheckBox
            android:id="@+id/simulation_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Simulation" />

        <CheckBox
            android:id="@+id/sports_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sports" />

        <CheckBox
            android:id="@+id/mystery_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Mystery" />

        <CheckBox
            android:id="@+id/historical_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Historical" />

        <CheckBox
            android:id="@+id/Romance_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Romance" />

        <CheckBox
            android:id="@+id/western_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Western" />

        <CheckBox
            android:id="@+id/fiction_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Fiction" />

        <CheckBox
            android:id="@+id/costumbrismo_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Costumbrismo" />

        <CheckBox
            android:id="@+id/magicRealism_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MagicRealism" />


        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/Register"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/final_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="23sp" />

    </LinearLayout>
</ScrollView>