<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_books">

    <fragment
        android:id="@+id/navigation_books"
        android:name="com.example.pathseen.ui.Books.BooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_books" />

    <fragment
        android:id="@+id/navigation_games"
        android:name="com.example.pathseen.ui.Games.GamesFragment"
        android:label="@string/tittle_games"
        tools:layout="@layout/fragment_games" />

    <fragment
        android:id="@+id/navigation_options"
        android:name="com.example.pathseen.ui.Options.OptionsFragment"
        android:label="@string/tittle_options"
        tools:layout="@layout/fragment_options" />
    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.example.pathseen.ui.Movies.MoviesFragment"
        android:label="MoviesFragment"
        tools:layout="@layout/fragment_movies"/>
</navigation>